--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "axios": "^1.7.2",
     "fabric": "^6.0.2",
     "html2canvas": "^1.4.1",
+    "lucide": "^0.427.0",
     "lucide-react": "^0.417.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
